# tetris-haskell

./: Guardfile  README.md  tetris-haskell.cabal  tetrix-haskell.cabal
src/: AbstractUI.hs  Actors.hs  Core.hs  GUI.hs  Game.hs  Main.hs  Processes.hs  Stage.hs
src/Core/: Game.hs
test/: StageSpec.hs  Test.hs
