Name:               tetris-haskell
Version:            0.1
Description:        Tetrix implementation using Haskell
License:            GPL-3
License-file:       LICENSE
Author:             Toni Cebrián
Maintainer:         ancechu@gmail.com
Build-Type:         Simple
Cabal-Version:      >=1.8
executable tetris
  main-is:          Main.hs
  ghc-options:      -threaded -rtsopts -O2
  ghc-prof-options: -prof -caf-all -auto-all
  Build-Depends:    base >= 4,
                    containers >= 0.4,
                    gtk,
                    cairo,
                    mtl,
                    random,
                    distributed-process >= 0.4,
                    network-transport-tcp >= 0.3,
                    binary
  hs-source-dirs:   src

test-suite test-tetris
    type:           exitcode-stdio-1.0
    main-is:        Spec.hs
    hs-source-dirs: test src
    ghc-options:    
    build-depends:  base >= 4,
                    QuickCheck >= 2.4,
                    HUnit >= 1.0,
                    hspec >= 1.3.0,
                    containers >= 0.4,
                    binary

